--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ src/config/master.key
 # mysqlの実行中データは不要
 src/db/mysql_data
 
+# 環境変数ファイルは不要
+.env
+
 # OS generated files #
 ######################
 .DS_Store
