--- a/src/Gemfile
+++ b/src/Gemfile
@@ -46,7 +46,7 @@ gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 gem "bootsnap", require: false
 
 # Use Sass to process CSS
-# gem "sassc-rails"
+gem "sassc-rails"
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
@@ -57,9 +57,14 @@ gem "bootsnap", require: false
 gem "devise"
 # 環境変数設定
 gem 'dotenv-rails'
+# 管理
+gem 'rails_admin', '~> 3.0'
+gem 'cancancan'
+
 # 日本語関連
 gem 'devise-i18n'
 gem 'devise-i18n-views'
+gem 'enum_help'
 
 
 group :development, :test do
