・デバッグできるようにgem debug導入 ・仮の問題出力画面作成、出題ロジック作成 ・簡体字、繁体字の出力切り替え作成 ・Questionモデルに「別解」用カラムを追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - "3000:3000"
     environment:
       RAILS_ENV: development
+    stdin_open: true
+    tty: true
     depends_on:
       - db
     env_file:
