--- a/src/Gemfile
+++ b/src/Gemfile
@@ -69,6 +69,9 @@ gem 'devise-i18n'
 gem 'devise-i18n-views'
 gem 'enum_help'
 
+# ページネーション
+gem 'kaminari'
+gem 'bootstrap5-kaminari-views'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
