--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,9 @@ services:
       - db
     env_file:
       - .env
+  mailcatcher:
+    image: schickling/mailcatcher
+    container_name: mailcatcher
+    ports:
+      - '1080:1080'
+      - '1025:1025'
