--- a/src/Gemfile
+++ b/src/Gemfile
@@ -87,6 +87,9 @@ group :development, :test do
 end
 
 group :development do
+  # jsやcssのコンパイルのために平行で走らせるプロセス
+  gem 'foreman', '~> 0.87.2'
+
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
 
