--- a/src/Gemfile
+++ b/src/Gemfile
@@ -80,7 +80,8 @@ gem 'bootstrap5-kaminari-views'
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
 #  gem "debug", platforms: %i[ mri mingw x64_mingw ]
-  gem 'debug'
+#  gem 'debug'
+  gem 'pry-remote'
 
   # テスト用
   gem "rspec-rails", '~> 6.0.0'
